finally fixed card photo resizing on mobile

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -205,7 +205,7 @@ body {
   width: fit-content !important;
 }
 
-@media only screen and (max-width: 560px)  { 
+@media only screen and (max-width: 805px)  { 
   .card-img-top {
     width: 100% !important;
     height: 40vw !important;
